--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-# requirements.txt
-gunicorn
-Flask
-google-cloud-storage
-requests
+gunicorn==21.2.0
+Flask==2.3.3
+google-cloud-storage==2.11.0
+requests==2.31.0
